# Geni_Ai_2

./: main.py  pyproject.toml
Text splitter/: notes.md  test.py
document_loader/: notes.txt  test.py
