[project]
name = "gen-ai-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.8",
    "langchain-community>=0.4.2",
    "langchain-docling>=2.0.0",
    "langchain-openai>=1.3.3",
    "python-dotenv>=1.2.2",
]
